--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ dist: trusty
 language: python
 
 before_install:
-  - sudo apt update
+  - sudo apt-get update
+  - sudo apt-get install python-sphinx
   - which python
   - python --version
   - which pip
@@ -15,6 +16,8 @@ install:
   - pip install sphinx_rtd_theme
   - pip install http://download.pytorch.org/whl/cpu/torch-0.3.0.post4-cp36-cp36m-linux_x86_64.whl
   - pip install torchvision
+  - python setup.py install
+  - pip install --upgrade pytest
 
 cache:
   pip: true
@@ -36,6 +39,7 @@ script:
   - cd ..
   - pip install doctr
   - doctr deploy .
+  - pytest
 
 after_success:
   - codecov
