--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install -r requirements.txt
   - pip install codecov
   - pip install recommonmark
+  - pip install sphinx
   - pip install sphinx_rtd_theme
   - pip install http://download.pytorch.org/whl/cpu/torch-0.3.0.post4-cp36-cp36m-linux_x86_64.whl
   - pip install torchvision
